**App update:**

- Nothing changed...

**Parsers update:**

- Advanced: Fix nullable strings usage, migrate models to data class and update Manga class