@@ -7,7 +7,7 @@ data class MangaCompactListModel(
 	override val id: Long,
 	override val title: String,
 	val subtitle: String,
-	override val coverUrl: String,
+	override val coverUrl: String?,
 	override val manga: Manga,
 	override val counter: Int,
 	override val progress: ReadingProgress?,
