@@ -6,7 +6,7 @@ import org.koitharu.kotatsu.parsers.model.Manga
 
 data class FeedItem(
 	val id: Long,
-	val imageUrl: String,
+	val imageUrl: String?,
 	val title: String,
 	val manga: Manga,
 	val count: Int,
