@@ -31,7 +31,7 @@ material = "1.13.0-alpha09"
 moshi = "1.15.2"
 okhttp = "4.12.0"
 okio = "3.9.1"
-parsers = "8ce6694232"
+parsers = "6abcdd8d4b"
 preference = "1.2.1"
 recyclerview = "1.3.2"
 room = "2.6.1"
